test mobile second

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
 
     <div id="fullpage">
-      <div class="section">
+      <div id="section-header" class="section">
         <div class="wrapper-second">
           <div id="myTopbar" class="topbar">
             <div class="container">
@@ -224,8 +224,8 @@
         <div class="slider-main owl-carousel owl-theme">
           <div class="item">
             <img
-              src="https://vnfm.vn/pic/banner/slider-1_1616_hasthumb_7959_HasThumb.jpg"
-              alt=""
+              src="./images/background-2.jpg"
+              alt="this-is-background"
             />
             <div class="slider-main__content">
               Bảo tàng tài nguyên rừng Việt Nam
@@ -238,8 +238,8 @@
           </div>
           <div class="item">
             <img
-              src="https://vnfm.vn/pic/banner/slider-1_1616_hasthumb_7959_HasThumb.jpg"
-              alt=""
+              src="./images/background-1.jpg"
+              alt="this-is-background"
             />
             <div class="slider-main__content">
               Bảo tàng tài nguyên rừng Việt Nam
@@ -252,8 +252,8 @@
           </div>
           <div class="item">
             <img
-              src="https://vnfm.vn/pic/banner/slider-1_1616_hasthumb_7959_HasThumb.jpg"
-              alt=""
+              src="./images/background-3.jpg"
+              alt="this-is-background"
             />
             <div class="slider-main__content">
               Bảo tàng tài nguyên rừng Việt Nam
@@ -266,8 +266,8 @@
           </div>
           <div class="item">
             <img
-              src="https://vnfm.vn/pic/banner/slider-1_1616_hasthumb_7959_HasThumb.jpg"
-              alt=""
+              src="./images/background-4.jpg"
+              alt="this-is-background"
             />
             <div class="slider-main__content">
               Bảo tàng tài nguyên rừng Việt Nam
@@ -408,7 +408,7 @@
               <a href="#!" class="exhibition__item">
                 <img
                   class="exhibition__item-image"
-                  src="./images/exhibition-1.jpg"
+                  src="https://images.unsplash.com/photo-1486916856992-e4db22c8df33?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1074&q=80"
                   alt="this-is-image"
                 />
                 <div class="exhibition__item-label">Animal Display</div>
@@ -416,7 +416,7 @@
               <a href="#!" class="exhibition__item">
                 <img
                   class="exhibition__item-image"
-                  src="./images/exhibition-2.jpg"
+                  src="https://images.unsplash.com/photo-1565041054083-45a0d4b25229?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1171&q=80"
                   alt="this-is-image"
                 />
                 <div class="exhibition__item-label">Insect display</div>
@@ -424,7 +424,7 @@
               <a href="#!" class="exhibition__item">
                 <img
                   class="exhibition__item-image"
-                  src="./images/exhibition-3.jpg"
+                  src="https://images.unsplash.com/photo-1534349762230-e0cadf78f5da?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
                   alt="this-is-image"
                 />
                 <div class="exhibition__item-label">Botanical display</div>
@@ -432,7 +432,7 @@
               <a href="#!" class="exhibition__item">
                 <img
                   class="exhibition__item-image"
-                  src="./images/exhibition-4.jpg"
+                  src="https://images.unsplash.com/photo-1568060965761-76ea3db880b5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
                   alt="this-is-image"
                 />
                 <div class="exhibition__item-label">Botanical Garden</div>
@@ -440,7 +440,7 @@
               <a href="#!" class="exhibition__item">
                 <img
                   class="exhibition__item-image"
-                  src="./images/exhibition-5.jpg"
+                  src="https://images.unsplash.com/photo-1518998053901-5348d3961a04?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1074&q=80"
                   alt="this-is-image"
                 />
                 <div class="exhibition__item-label">Eco simulation room</div>
@@ -449,12 +449,12 @@
           </div>
         </div>
       </div>
+
       <div id="section-news" class="section">
         <video
           id="myVideo"
           oncontextmenu="return false;"
           autoplay
-          muted
           loop
           playsinline
         >
@@ -463,7 +463,7 @@
         <div class="news">
           <div class="container">
             <h2>
-              <a class="heading heading--light" href="#!"> News </a>
+              <a class="heading heading--primary" href="#!"> News </a>
             </h2>
             <div class="news__tab">
               <a href="#!" class="news__tab-item active">
@@ -879,7 +879,7 @@
               <a href="#!" class="library__wrapper-item">
                 <img
                   class="library__wrapper-image"
-                  src="./images/library-1.jpg"
+                  src="https://images.unsplash.com/photo-1534349762230-e0cadf78f5da?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
                   alt="this-is-image"
                 />
                 <div class="library__wrapper-heading">
@@ -896,7 +896,7 @@
               <a href="#!" class="library__wrapper-item">
                 <img
                   class="library__wrapper-image"
-                  src="./images/library-2.jpg"
+                  src="https://images.unsplash.com/photo-1518998053901-5348d3961a04?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1074&q=80"
                   alt="this-is-image"
                 />
                 <div class="library__wrapper-heading">
@@ -913,7 +913,7 @@
               <a href="#!" class="library__wrapper-item">
                 <img
                   class="library__wrapper-image"
-                  src="./images/library-3.jpg"
+                  src="https://images.unsplash.com/photo-1621848296279-7751546e9acc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1190&q=80"
                   alt="this-is-image"
                 />
                 <div class="library__wrapper-heading">
@@ -932,7 +932,7 @@
         </div>
       </div>
 
-      <div class="section">
+      <!-- <div class="section">
         <div class="events">
           <div class="container">
             <h2>
@@ -1007,7 +1007,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="section">
         <div class="footer-home">
@@ -1195,6 +1195,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/fullpage.js@3/dist/fullpage.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery.Marquee/1.5.0/jquery.marquee.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="./js/home.js"></script>
     <script src="./js/main.js"></script>
   </body>
