test loading lazy

--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
             <img
               src="./images/background-2.jpg"
               alt="this-is-background"
+              loading="lazy"
             />
             <div class="slider-main__content">
               Bảo tàng tài nguyên rừng Việt Nam
@@ -240,6 +241,7 @@
             <img
               src="./images/background-1.jpg"
               alt="this-is-background"
+              loading="lazy"
             />
             <div class="slider-main__content">
               Bảo tàng tài nguyên rừng Việt Nam
@@ -254,6 +256,7 @@
             <img
               src="./images/background-3.jpg"
               alt="this-is-background"
+              loading="lazy"
             />
             <div class="slider-main__content">
               Bảo tàng tài nguyên rừng Việt Nam
@@ -268,6 +271,7 @@
             <img
               src="./images/background-4.jpg"
               alt="this-is-background"
+              loading="lazy"
             />
             <div class="slider-main__content">
               Bảo tàng tài nguyên rừng Việt Nam
@@ -279,6 +283,7 @@
             ></a>
           </div>
         </div>
+        
         <div class="marquee">
           <a href="#!" class="marquee__title"
             ><i class="fa-regular fa-star"></i> Tin tức nổi bật</a
