--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@
                   <div class="support__column-main">
                     <div class="support__column-image">
                       <a class="support__column-link" href="#!">
-                        <img src="./images/support-1.jpg" alt="this-is-image" />
+                        <img src="https://c4.wallpaperflare.com/wallpaper/686/77/112/fairy-wren-birds-fence-wallpaper-preview.jpg" alt="this-is-image" />
                       </a>
                     </div>
                     <div
@@ -818,7 +818,7 @@
                     <div class="support__column-main">
                       <div class="support__column-image">
                         <a class="support__column-link" href="#!">
-                          <img src="./images/support-2.jpg" alt="this-is-image" />
+                          <img src="https://images.unsplash.com/photo-1569870666071-00fb4bc13f0e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1074&q=80" alt="this-is-image" />
                         </a>
                       </div>
                       <div
@@ -837,7 +837,7 @@
                     <div class="support__column-main">
                       <div class="support__column-image">
                         <a class="support__column-link" href="#!">
-                          <img src="./images/support-3.jpg" alt="this-is-image" />
+                          <img src="https://plus.unsplash.com/premium_photo-1661963813924-d75bc5202873?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1193&q=80" alt="this-is-image" />
                         </a>
                       </div>
                       <div
@@ -1182,10 +1182,7 @@
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Yf5d_Zx3AaI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Yf5d_Zx3AaI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/Yf5d_Zx3AaI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/Yf5d_Zx3AaI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/Yf5d_Zx3AaI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/Yf5d_Zx3AaI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
