--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" sizes="96x96" href="./images/favicon.png">
     <title>BẢO TÀNG TÀI NGUYÊN RỪNG VIỆT NAM</title>
     <link rel="stylesheet" href="./css/home.css" />
     <link rel="stylesheet" href="./css/global.css" />
@@ -35,7 +36,7 @@
       <div class="loader"><span></span><span></span></div>
     </div>
 
-    <div class="wrapper">
+    <div id="wrapper">
       <div class="hotline">
         <a href="tel:+47333789018" class="hotline__phone">
           <div class="hotline__phone-icon">
@@ -1175,7 +1176,6 @@
         </div>
       </div>
     </div>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/fullpage.js@3/dist/fullpage.min.js"></script>
