--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
           </div>
         </div>
         <div class="section">
-          <div class="forest">
+          <div id="section-forest" class="forest">
             <div class="container">
               <img src="./images/logo-forest.png" alt="this-is-img" />
               <h1>
@@ -378,7 +378,7 @@
           </div>
         </div>
         <div class="section">
-          <div class="exhibition">
+          <div id="exhibition-section" class="exhibition">
             <div class="container">
               <div class="exhibition__gallery">
                 <div class="exhibition__item">
@@ -455,7 +455,7 @@
           <div class="news">
             <div class="container">
               <h2>
-                <a class="heading heading--primary" href="#!"> News </a>
+                <a style="color: white;" class="heading heading--primary" href="#!"> News</a>
               </h2>
               <div class="news__tab">
                 <a href="#!" class="news__tab-item active">
@@ -762,7 +762,7 @@
           </div>
         </div>
         <div class="section">
-          <div class="support">
+          <div id="support-section" class="support">
             <div class="container">
               <h2>
                 <a href="#!" class="heading heading--primary"
@@ -855,7 +855,7 @@
           </div>
         </div>
         <div class="section">
-          <div class="library">
+          <div id="library-section" class="library">
             <div class="container">
               <h2 class="heading heading--light">Library</h2>
               <p class="library__desc">
@@ -996,7 +996,7 @@
           </div>
         </div> -->
         <div class="section">
-          <div class="footer-home">
+          <div id="section-footer-home" class="footer-home">
             <div class="container">
               <a class="footer__logo" href="index.html">
                 <img src="./images/logo.png" alt="this-is-logo" />
@@ -1102,7 +1102,7 @@
               </div>
               <div class="footer__copyright">
                 <div class="footer__copyright-line"></div>
-                <span
+                <span class="footer__copyright-text"
                   >Website copyright belongs to the Vietnam Forest Resources
                   Museum.
                   <a
