--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" sizes="96x96" href="./images/favicon.png">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="./images/favicon.png"
+    />
     <title>BẢO TÀNG TÀI NGUYÊN RỪNG VIỆT NAM</title>
     <link rel="stylesheet" href="./css/home.css" />
     <link rel="stylesheet" href="./css/global.css" />
@@ -11,7 +16,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
       rel="stylesheet"
     />
-
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
@@ -61,8 +65,8 @@
                           src="./images/topbar-clock.png"
                           alt="this-is-icon"
                         />
-                        <b>OPENING HOURS:</b>Monday to Friday From 8:00 am to 4:30
-                        pm
+                        <b>OPENING HOURS:</b>Monday to Friday From 8:00 am to
+                        4:30 pm
                       </li>
                       <li class="topbar__info-item">
                         <img
@@ -164,7 +168,9 @@
                         <li><a href="#!">Soil Exhibitions</a></li>
                         <li><a href="#!">Insect Exhibitions</a></li>
                         <li>
-                          <a href="#!">History of Vietnam Forestry exhibitions</a>
+                          <a href="#!"
+                            >History of Vietnam Forestry exhibitions</a
+                          >
                         </li>
                       </ul>
                     </li>
@@ -282,7 +288,8 @@
                   <a href="#!">
                     <i class="fas fa-angles-right"></i>
                     Thứ trưởng bộ Nông nghiệp và phát triển nông thôn Phùng Đức
-                    Tiến thăm và làm việc tại Bảo tàng Tài nguyên rừng Việt Nam</a
+                    Tiến thăm và làm việc tại Bảo tàng Tài nguyên rừng Việt
+                    Nam</a
                   >
                 </li>
                 <li>
@@ -300,15 +307,15 @@
                 <li>
                   <a href="#!">
                     <i class="fas fa-angles-right"></i>
-                    Đại hội Công đoàn Bảo tàng Tài nguyên rừng khoá III, nhiệm kì
-                    2023 -2028</a
+                    Đại hội Công đoàn Bảo tàng Tài nguyên rừng khoá III, nhiệm
+                    kì 2023 -2028</a
                   >
                 </li>
                 <li>
                   <a href="#!">
                     <i class="fas fa-angles-right"></i>
-                    Đại hội Công đoàn Viện Điều tra Quy hoạch Rừng lần thứ XVIII,
-                    nhiệm kỳ 2023-2028</a
+                    Đại hội Công đoàn Viện Điều tra Quy hoạch Rừng lần thứ
+                    XVIII, nhiệm kỳ 2023-2028</a
                   >
                 </li>
               </ul>
@@ -328,18 +335,18 @@
               <p class="forest__description">
                 Bảo tàng đã và đang lưu giữ Bộ mẫu vật về tài nguyên rừng gồm:
                 Động vật (với đa dạng các lớp: chim, thú, bò sát, lưỡng cư,…),
-                thực vật và côn trùng. Được thu thập từ khắp các vùng miền trên cả
-                nước, với nhiều loài quý hiếm có nguy cơ bị tuyệt chủng được ghi
-                tên trong sách đỏ Việt Nam. Chúng được bảo quản và lưu giữ cẩn
-                thận trong tòa nhà với diện tích hơn một ngàn mét vuông. Bảo tàng
-                Tài nguyên rừng Việt Nam không chỉ có Bộ mẫu vật khô quý giá đó mà
-                còn có một Bộ mẫu vật về tài nguyên sống. Đó chính là khu vườn
-                thực vật rộng trên 3ha được gắn liền với Nhà trưng bày của Bảo
-                tàng. Khu vườn có đầy đủ các loài thực vật đặc trưng cho các kiểu
-                rừng điển hình của nước ta. Với sự đa dạng và phong phú của tài
-                nguyên thiên nhiên ban tặng, Bảo tàng Tài nguyên rừng Việt Nam như
-                một khu rừng thu nhỏ nằm giữa lòng Thủ đô chắc chắn sẽ để lại ấn
-                tượng khó phai cho những ai đã từng đến nơi đây.
+                thực vật và côn trùng. Được thu thập từ khắp các vùng miền trên
+                cả nước, với nhiều loài quý hiếm có nguy cơ bị tuyệt chủng được
+                ghi tên trong sách đỏ Việt Nam. Chúng được bảo quản và lưu giữ
+                cẩn thận trong tòa nhà với diện tích hơn một ngàn mét vuông. Bảo
+                tàng Tài nguyên rừng Việt Nam không chỉ có Bộ mẫu vật khô quý
+                giá đó mà còn có một Bộ mẫu vật về tài nguyên sống. Đó chính là
+                khu vườn thực vật rộng trên 3ha được gắn liền với Nhà trưng bày
+                của Bảo tàng. Khu vườn có đầy đủ các loài thực vật đặc trưng cho
+                các kiểu rừng điển hình của nước ta. Với sự đa dạng và phong phú
+                của tài nguyên thiên nhiên ban tặng, Bảo tàng Tài nguyên rừng
+                Việt Nam như một khu rừng thu nhỏ nằm giữa lòng Thủ đô chắc chắn
+                sẽ để lại ấn tượng khó phai cho những ai đã từng đến nơi đây.
               </p>
               <div class="forest__count">
                 <div class="forest__count-item">
@@ -455,15 +462,25 @@
           <div class="news">
             <div class="container">
               <h2>
-                <a style="color: white;" class="heading heading--primary" href="#!"> News</a>
+                <a
+                  style="color: white"
+                  class="heading heading--primary"
+                  href="#!"
+                >
+                  News</a
+                >
               </h2>
               <div class="news__tab">
                 <a href="#!" class="news__tab-item active">
                   Activities - events
                 </a>
                 <a href="#!" class="news__tab-item">Scientific research</a>
-                <a href="#!" class="news__tab-item"> Environmental Education </a>
-                <a href="#!" class="news__tab-item"> Inernational co-oporation</a>
+                <a href="#!" class="news__tab-item">
+                  Environmental Education
+                </a>
+                <a href="#!" class="news__tab-item">
+                  Inernational co-oporation</a
+                >
                 <a href="#!" class="news__tab-item"> Exhibition</a>
               </div>
               <div class="news__content">
@@ -774,7 +791,10 @@
                   <div class="support__column-main">
                     <div class="support__column-image">
                       <a class="support__column-link" href="#!">
-                        <img src="https://c4.wallpaperflare.com/wallpaper/686/77/112/fairy-wren-birds-fence-wallpaper-preview.jpg" alt="this-is-image" />
+                        <img
+                          src="https://c4.wallpaperflare.com/wallpaper/686/77/112/fairy-wren-birds-fence-wallpaper-preview.jpg"
+                          alt="this-is-image"
+                        />
                       </a>
                     </div>
                     <div
@@ -803,8 +823,8 @@
                       <h2>Giờ tham quan</h2>
                       <h3>Từ 08h00 đến 17h00</h3>
                       <span
-                        ><b>Thời gian:</b> Từ 08h 00 đến 17h00 Từ thứ Hai đến thứ
-                        Sáu</span
+                        ><b>Thời gian:</b> Từ 08h 00 đến 17h00 Từ thứ Hai đến
+                        thứ Sáu</span
                       >
                       <div class="support__column-line"></div>
                       <span
@@ -819,7 +839,10 @@
                     <div class="support__column-main">
                       <div class="support__column-image">
                         <a class="support__column-link" href="#!">
-                          <img src="https://images.unsplash.com/photo-1569870666071-00fb4bc13f0e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1074&q=80" alt="this-is-image" />
+                          <img
+                            src="https://images.unsplash.com/photo-1569870666071-00fb4bc13f0e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1074&q=80"
+                            alt="this-is-image"
+                          />
                         </a>
                       </div>
                       <div
@@ -838,7 +861,10 @@
                     <div class="support__column-main">
                       <div class="support__column-image">
                         <a class="support__column-link" href="#!">
-                          <img src="https://plus.unsplash.com/premium_photo-1661963813924-d75bc5202873?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1193&q=80" alt="this-is-image" />
+                          <img
+                            src="https://plus.unsplash.com/premium_photo-1661963813924-d75bc5202873?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1193&q=80"
+                            alt="this-is-image"
+                          />
                         </a>
                       </div>
                       <div
