test fix loader mobile

--- a/index.html
+++ b/index.html
@@ -463,8 +463,7 @@
             <div class="container">
               <h2>
                 <a
-                  style="color: white"
-                  class="heading heading--primary"
+                  class="heading heading--light"
                   href="#!"
                 >
                   News</a
